[gd_scene load_steps=21 format=3 uid="uid://du53ax6xw71ai"]

[ext_resource type="PackedScene" uid="uid://cx8fo1iuv1i0n" path="res://scenes/tiles/tile.tscn" id="1"]
[ext_resource type="Script" uid="uid://cyqkwb2a3b2bq" path="res://scenes/tiles/units/unit.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://siiihsh6wb0p" path="res://scenes/fx/explosion.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://m81x4smw4a2u" path="res://assets/gui/board/healthbar/healthbar.png" id="3_4v477"]
[ext_resource type="Texture2D" uid="uid://c6wfohsbmqdbc" path="res://assets/gui/board/healthbar/healthbar_bg.png" id="3_887dj"]
[ext_resource type="PackedScene" uid="uid://birqw0e7qiovc" path="res://scenes/ui/board/voxel_star.tscn" id="4"]
[ext_resource type="AudioStream" uid="uid://d2ui51cs65ub2" path="res://assets/audio/pickup_box.wav" id="5"]
[ext_resource type="Texture2D" uid="uid://c57gygmdclsy8" path="res://assets/gui/board/healthbar/energybar.png" id="5_4gmy7"]
[ext_resource type="PackedScene" uid="uid://b6leaqbp4x4wb" path="res://scenes/ui/icons/star.tscn" id="5_dwvvw"]

[sub_resource type="Gradient" id="10"]
offsets = PackedFloat32Array(0.259259, 0.866667)
colors = PackedColorArray(0.117647, 0.117647, 0.117647, 1, 0.431373, 0.431373, 0.431373, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_0cxrh"]
gradient = SubResource("10")

[sub_resource type="Curve" id="12"]
_limits = [0.0, 4.0, 0.0, 1.0]
_data = [Vector2(0, 1.5), 0.0, 0.0, 0, 0, Vector2(1, 3.855), -1.98881, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_0t2my"]
curve = SubResource("12")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1cvum"]
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
scale_curve = SubResource("CurveTexture_0t2my")
color_ramp = SubResource("GradientTexture1D_0cxrh")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mmiam"]
shading_mode = 0
vertex_color_use_as_albedo = true

[sub_resource type="BoxMesh" id="BoxMesh_2lsco"]
material = SubResource("StandardMaterial3D_mmiam")
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="Animation" id="Animation_qsh5y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mesh_anchor/dust:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="1"]
resource_name = "level_up"
length = 12.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("voxel_star:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 12),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("voxel_star:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 12),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 8, 0)]
}

[sub_resource type="Animation" id="2"]
length = 0.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_animate_next_path_segment"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("mesh_anchor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("mesh_anchor/dust:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aqf0r"]
_data = {
&"RESET": SubResource("Animation_qsh5y"),
&"level_up": SubResource("1"),
&"move": SubResource("2")
}

[node name="unit" instance=ExtResource("1")]
script = ExtResource("2")
unit_name = ""
side = "neutral"
material_type = "normal"
max_hp = 10
max_move = 4
attack = 7
armor = 2
can_capture = false
can_fly = false
max_attacks = 1
uses_metallic_material = false
unit_value = 0
unit_class = ""
perform_extra_lookup = false

[node name="mesh_anchor" type="Node3D" parent="." index="0"]

[node name="mesh" type="MeshInstance3D" parent="mesh_anchor" index="0"]

[node name="activity_light" type="SpotLight3D" parent="mesh_anchor" index="1"]
transform = Transform3D(1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 1, 0)
visible = false
light_energy = 80.0
spot_range = 4.0
spot_angle = 80.0

[node name="dust" type="GPUParticles3D" parent="mesh_anchor" index="2"]
cast_shadow = 0
emitting = false
amount = 500
lifetime = 0.5
one_shot = true
randomness = 1.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_1cvum")
draw_pass_1 = SubResource("BoxMesh_2lsco")

[node name="healthbar" type="Sprite3D" parent="mesh_anchor" index="3"]
visible = false
offset = Vector2(0, 300)
billboard = 1
no_depth_test = true

[node name="SubViewport" type="SubViewport" parent="mesh_anchor/healthbar" index="0"]
disable_3d = true
transparent_bg = true
size = Vector2i(300, 80)

[node name="bar" type="TextureProgressBar" parent="mesh_anchor/healthbar/SubViewport" index="0"]
texture_filter = 1
offset_right = 10.0
offset_bottom = 2.0
scale = Vector2(30, 20)
max_value = 10.0
value = 10.0
texture_under = ExtResource("3_887dj")
texture_progress = ExtResource("3_4v477")

[node name="energy" type="TextureProgressBar" parent="mesh_anchor/healthbar/SubViewport" index="1"]
texture_filter = 1
offset_top = 40.0
offset_right = 10.0
offset_bottom = 42.0
scale = Vector2(30, 20)
max_value = 10.0
value = 10.0
texture_under = ExtResource("3_887dj")
texture_progress = ExtResource("5_4gmy7")

[node name="level1" type="Node2D" parent="mesh_anchor/healthbar/SubViewport" index="2"]
visible = false

[node name="star" parent="mesh_anchor/healthbar/SubViewport/level1" index="0" instance=ExtResource("5_dwvvw")]
texture_filter = 1
position = Vector2(150, 20)
scale = Vector2(2, 2)

[node name="level2" type="Node2D" parent="mesh_anchor/healthbar/SubViewport" index="3"]
visible = false

[node name="star" parent="mesh_anchor/healthbar/SubViewport/level2" index="0" instance=ExtResource("5_dwvvw")]
texture_filter = 1
position = Vector2(125, 20)
scale = Vector2(2, 2)

[node name="star2" parent="mesh_anchor/healthbar/SubViewport/level2" index="1" instance=ExtResource("5_dwvvw")]
texture_filter = 1
position = Vector2(175, 20)
scale = Vector2(2, 2)

[node name="level3" type="Node2D" parent="mesh_anchor/healthbar/SubViewport" index="4"]
visible = false

[node name="star" parent="mesh_anchor/healthbar/SubViewport/level3" index="0" instance=ExtResource("5_dwvvw")]
texture_filter = 1
position = Vector2(150, 20)
scale = Vector2(2, 2)

[node name="star2" parent="mesh_anchor/healthbar/SubViewport/level3" index="1" instance=ExtResource("5_dwvvw")]
texture_filter = 1
position = Vector2(100, 20)
scale = Vector2(2, 2)

[node name="star3" parent="mesh_anchor/healthbar/SubViewport/level3" index="2" instance=ExtResource("5_dwvvw")]
texture_filter = 1
position = Vector2(200, 20)
scale = Vector2(2, 2)

[node name="animations" type="AnimationPlayer" parent="." index="1"]
libraries = {
"": SubResource("AnimationLibrary_aqf0r")
}
speed_scale = 6.0

[node name="explosion" parent="." index="3" instance=ExtResource("3")]

[node name="voxel_star" parent="." index="4" instance=ExtResource("4")]
visible = false

[node name="audio" type="Node" parent="." index="5"]

[node name="spawn" type="AudioStreamPlayer" parent="audio" index="0"]
bus = &"Units"

[node name="move" type="AudioStreamPlayer" parent="audio" index="1"]
bus = &"Units"

[node name="attack" type="AudioStreamPlayer" parent="audio" index="2"]
bus = &"Attack"

[node name="hit" type="AudioStreamPlayer" parent="audio" index="3"]
bus = &"Attack"

[node name="damage" type="AudioStreamPlayer" parent="audio" index="4"]
bus = &"Damage"

[node name="die" type="AudioStreamPlayer" parent="audio" index="5"]
bus = &"Explosion"

[node name="level_up" type="AudioStreamPlayer" parent="audio" index="6"]
stream = ExtResource("5")
bus = &"Units"
